@@ -20,6 +20,8 @@ from a selected group or its subgroups
 
 Added PHP version check
 
+Better error handling when the event listener fails
+
 -------------------------------------
 	4.2-2	2012-10-15
 -------------------------------------
